Fix aside nav on mobile

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -107,6 +107,7 @@ body {
   &--aside {
     .item--nav {
       display: list-item;
+      margin-left: 0;
     }
   }
 }
